--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,4 +1,15 @@
 /* General */
+*{
+	font-family: sans-serif;
+}
+html, body{
+	height: 100% !important;
+	min-height: 100% !important;
+}
+body{
+	padding: 0;
+	margin: 0;
+}
 .left{
 	float: left;
 }
@@ -9,21 +20,36 @@
 	clear: both;
 }
 
+/* Structure */
+#outer{
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100% !important;
+	min-height: 100% !important;
+	width: 100%;
+}
+
 /* Header */
 header{
+	position: fixed;
+	top: 0;
+	left: 0;
 	background: #F44336 !important;
 	color: #FFF !important;
 	text-shadow: none !important;
 	border: none !important;
 	box-shadow: 0px 0px 10px rgba(0,0,0,0.25);
+	width: 100%;
 }
 header h1{
 	display: inline-block !important;
 	position: relative;
-	left: 40px !important;
-	text-align: left !important;
-	margin: 20px 0px 14px 20px !important;
 	padding: 0 !important;
+	margin-left: 60px;
+	font-size: 1.2em;
+	font-weight: 750;
+	letter-spacing: 0.05em;
 }
 header .left, header .menu{
 	left: 20px;
@@ -32,19 +58,42 @@ header .right{
 	right: 20px;
 }
 
+/* Article */
+article{
+	margin-top: 50px;
+	padding: 1.3em;
+}
+
 /* Menu */
 #menu{
+	position: fixed;
+	left: -100%;
+	top: 0;
+	width: 80%;
+	max-width: 300px;
+	height: 100%;
 	background: #FFF;
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.25);
+	z-index: 999;
 }
-#menu .ui-panel-inner{
-	padding: 0 !important;
+#black{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.5);
+	z-index: 900;
+	display: none;
+	content: "";
 }
+
 #menu ul{
 	padding: 0;
 	list-style: none;
 }
 #menu ul li{
-	padding: 10px 20px 14px;
+	padding: 15px 20px;
 }
 #menu ul li.active{
 	background: #EEE;
@@ -61,11 +110,7 @@ header .right{
 	top: 5px;
 	background-color: #AAA !important;
 }
-.ui-panel-dismiss{
-	animation: menu 1s ease-in;
-	animation-iteration-count: 1;
-	background: rgba(0,0,0,0.15);
-}
+
 @keyframes menu{
 	from{
 		background: none;
@@ -161,12 +206,6 @@ header .right{
 }
 
 /* Body */
-.ui-content{
-	position: relative;
-	top: 10px;
-	padding: 1.5em !important;
-}
-.ui-page{
-	background: #FFF !important;
-}
 
+
+/* Inputs */
