--- a/app/css/style.css
+++ b/app/css/style.css
@@ -58,8 +58,8 @@ header .right{
 	right: 20px;
 }
 
-/* Article */
-article{
+/* Main */
+#main{
 	margin-top: 50px;
 	padding: 1.3em;
 }
@@ -73,7 +73,7 @@ article{
 	max-width: 300px;
 	height: 100%;
 	background: #FFF;
-	box-shadow: 0px 0px 10px rgba(0,0,0,0.25);
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.35);
 	z-index: 999;
 }
 #black{
