Ajustes de projeto

--- a/app/Discipulado/app/src/main/res/layout/activity_main.xml
+++ b/app/Discipulado/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.bodruk.discipulado.MainActivity">
+    tools:context="br.com.bodruk.MainActivity">
 
     <!-- view for AdMob Banner Ad -->
     <WebView
