--- a/app/Discipulado/app/src/main/res/layout/splashscreen.xml
+++ b/app/Discipulado/app/src/main/res/layout/splashscreen.xml
@@ -5,10 +5,21 @@
     android:layout_height="fill_parent">
 
     <ImageView android:id="@+id/splashscreen"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@drawable/logo"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        android:layout_below="@+id/splashscreen"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"/>
 </RelativeLayout>
